--- a/index.css
+++ b/index.css
@@ -258,6 +258,7 @@ body {
 .syw-container{
     position: relative;
     width: 100%;
+    background: linear-gradient(to bottom, #A3CBCC 48%, #98C3C5 50%);
 }
 
 .bgimg {
@@ -393,13 +394,14 @@ h4{
   -webkit-font-smoothing: antialiased;
   text-align: center;
   font-size: 16px;
-  bottom: 50px;
+  bottom: 5%;
   left: 50%;
   transform: translate(-50%,0);
   color: #fff;
   letter-spacing: 1.5px;
   cursor: pointer;
   pointer-events: all;
+
 }
 
 .scrollTo-arrow {
@@ -478,7 +480,7 @@ h4{
 @media only screen and (min-width: 811px) {
   #brand-promises {
     background-color: white;
-    padding-top: 135px;
+    /* padding-top: 135px; */
   }
 
   .brand-promise {
